# pear

./: .ghcid  .gitignore  .hlint.yaml  .vimrc  Article.md  Bin.hs  Binary.hs  CHANGELOG.md  FILES.md  LICENSE  Makefile  Notes.md  Pear.hs  README.md  Setup.hs  TODO.md  base₂.cabal  binary-naturals.cabal  cabal.project  flake.nix  pear.cabal  shell.nix  ℕ₂.cabal
doc/: ANNOUNCE.md  Article.html  Article.lhs  Article.md
doc/Article/: Marge.xcf  balanced-trees.dot  unbalanced-trees.dot  uncounted-forest.dot
doc/images/: diagram-tools.txt
src/: Base₂.hs  Pear.hs  Test.hs  ℕ₂.hs
src/Base₂/: Binary.hs  Bit.hs  Example.hs  Finite.hs  Function.hs  Indexed.hs  Opt.hs  Singleton.hs  Two.hs  Vec.hs
src/Base₂/Binary/: Finite.hs  Singleton.hs
src/Base₂/Bit/: Finite.hs  Singleton.hs
src/Base₂/Singleton/: Applicative.hs  Known.hs
src/Base₂/Via/: Deindexed.hs  Elem.hs
src/Data/Natural/: Binary.hs
src/Data/Natural/Binary/: Two.hs  Type.hs
src/Data/Natural/Binary/Type/: Test.hs
src/Pear/: Binary.hs  Bit.hs  Example.hs  Finite.hs  Function.hs  Indexed.hs  Lens.hs  Opt.hs  Order.hs  Pair.hs  Positive.hs  Selected.hs  Singleton.hs  Those.hs  Tree.hs  Two.hs  Vec.hs  Zipper.hs
src/Pear/Binary/: Finite.hs  Singleton.hs
src/Pear/Bit/: Finite.hs  Kind.hs  Singleton.hs
src/Pear/Order/: Indexed.hs
src/Pear/Positive/: Kind.hs
src/Pear/Singleton/: Applicative.hs  Known.hs
src/Pear/Tree/: Indexed.hs
src/Pear/Vec/: Combine.hs
src/Pear/Via/: Deindexed.hs  Elem.hs
src/ℕ₂/: Binary.hs  Bit.hs  Finite.hs  Function.hs  Indexed.hs  Opt.hs  Singleton.hs  Two.hs  Vec.hs
src/ℕ₂/Binary/: Finite.hs  Singleton.hs
src/ℕ₂/Bit/: Finite.hs  Singleton.hs
src/ℕ₂/Singleton/: Applicative.hs  Known.hs
src/ℕ₂/Via/: Deindexed.hs  Elem.hs
test/: ANNOUNCE.lhs  doctest-article.hs  doctest.hs  markdown-examples.hs
test/Base₂/: Spec.hs  Test.hs
test/Base₂/Binary/: Spec.hs  Test.hs
test/Base₂/Bit/: Spec.hs  Test.hs
test/Pear/: Spec.hs
test/Pear/Binary/: Spec.hs
test/Pear/Binary/Finite/: Spec.hs
test/Pear/Bit/: Spec.hs
test/Pear/Positive/: Spec.hs
test/Pear/Tree/: Spec.hs
test/Pear/Vec/: Spec.hs
test/ℕ₂/: Spec.hs
test/ℕ₂/Binary/: Spec.hs
test/ℕ₂/Bit/: Spec.hs
