cabal-version:       >=1.10
name:                binary-naturals
version:             1.0.0.0
synopsis:            Binary encoding of natural numbers for the type-level
homepage:            github.com/rampion/binary-naturals
license:             PublicDomain
author:              Noah Luck Easterly
maintainer:          noah.easterly@gmail.com
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

library
  exposed-modules:     Data.Natural.Binary
                      ,Data.Natural.Binary.Type
                      ,Data.Natural.Binary.Two
  -- other-modules:
  ghc-options:         -Wall -Wextra -Werror -Wno-name-shadowing
  other-extensions:    AllowAmbiguousTypes, BlockArguments, DataKinds, DeriveTraversable, EmptyCase, FlexibleInstances, GADTs, KindSignatures, LambdaCase, NamedFieldPuns, PolyKinds, Rank2Types, StandaloneDeriving, StandaloneKindSignatures, TypeFamilies, TypeFamilyDependencies, TypeOperators, UndecidableInstances, ViewPatterns, ConstraintKinds, ConstrainedClassMethods
  build-depends:       base >=4.14 && <4.15, ghc-prim >=0.6 && <0.7
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite binary-naturals-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src
  main-is:             Test.hs
  -- hack around https://github.com/ndmitchell/ghcid/issues/208#issuecomment-674493644 so we can run tests with ghcid
  other-modules:       Data.Natural.Binary
                      ,Data.Natural.Binary.Type
                      ,Data.Natural.Binary.Type.Test
                      ,Data.Natural.Binary.Two
  build-depends:       base >=4.14 && <4.15
                     , ghc-prim >=0.6 && <0.7
                     , hspec >= 2.9.1 && < 3.0
                     , genvalidity-hspec >= 1.0.0.0 && < 1.1.0.0
                     , genvalidity >= 1.0.0.0 && < 1.1.0.0
                     , validity >= 0.12.0.0 && < 0.13.0.0
                     , validity >= 0.12.0.0 && < 0.13.0.0
                     , QuickCheck >= 2.14.2 && < 3.0.0
  ghc-options:         -Wall -Wextra -Werror -Wno-name-shadowing
