cabal-version:       2.2
name:                pear
version:             1.0.0.0
synopsis:            PearTree data structure
homepage:            github.com/rampion/pear
license:             CC0-1.0
author:              Noah Luck Easterly
maintainer:          noah.easterly@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

flag Development
  description: Enable all warnings and upgrade warnings to errors
  default: False
  manual: True

common library-setup
  if flag(development)
    ghc-options: -Wall -Wextra -Werror -Wno-name-shadowing
  build-depends:        base >=4.16 && <4.20
                      , mtl
  default-language:     GHC2021
  default-extensions:   BlockArguments
                        DataKinds
                        DerivingStrategies
                        ExplicitNamespaces
                        LambdaCase
                        PatternSynonyms
                        QuantifiedConstraints
                        TypeFamilies
                        UndecidableInstances

library
  import:               library-setup
  hs-source-dirs:       src
  exposed-modules:      Pear.Bit
                        Pear.Bit.Kind
                        Pear.Lens
                        Pear.Opt
                        Pear.Order
                        Pear.Order.Indexed
                        Pear.Pair
                        Pear.Positive
                        Pear.Positive.Kind
                        Pear.Tree
                        Pear.Tree.Indexed
                        Pear.Zipper
test-suite pear-spec
  import:               library-setup
  hs-source-dirs:       test
  ghc-options:          -threaded
  type:                 exitcode-stdio-1.0
  main-is:              Pear/Spec.hs
  other-modules:        Pear.Positive.Spec
                        Pear.Tree.Spec
  build-depends:        hspec
                      , pear
