cabal-version:       2.2
name:                pear
version:             1.0.0.0
synopsis:            Pear Tree data structure
description:
  This is the paragraph line of the description.
  .
  This is the second paragraph.
  .
  [This is a bold section header] This is an indented section.
  .
  This is the last paragraph.
homepage:            github.com/rampion/pear
license:             CC0-1.0
author:              Noah Luck Easterly
maintainer:          noah.easterly@gmail.com
extra-source-files:  CHANGELOG.md, README.md
-- custom setup for cabal-doctest
build-type:          Custom

custom-setup
  setup-depends:
      base           < 5
    , Cabal          < 4
    , cabal-doctest  >=1.0.9 && <1.1

flag Development
  description: Enable all warnings and upgrade warnings to errors
  default: False
  manual: True

common library-setup
  if flag(development)
    ghc-options: -Wall -Wextra -Werror -Wno-name-shadowing
  build-depends:        base >=4.18 && <4.20
                      , mtl
                      , transformers
                      , these
  default-language:     GHC2021
  default-extensions:   AllowAmbiguousTypes
                        BlockArguments
                        DataKinds
                        DerivingStrategies
                        ExplicitNamespaces
                        LambdaCase
                        PatternSynonyms
                        QuantifiedConstraints
                        TypeFamilies
                        UndecidableInstances

library
  import:               library-setup
  hs-source-dirs:       src
  exposed-modules:      Pear.Bit
                        Pear.Bit.Kind
                        Pear.Lens
                        Pear.Opt
                        Pear.Order
                        Pear.Order.Indexed
                        Pear.Pair
                        Pear.Positive
                        Pear.Positive.Kind
                        Pear.Tree
                        Pear.Tree.Indexed
                        Pear.Those
                        Pear.Zipper
test-suite pear-spec
  import:               library-setup
  hs-source-dirs:       test
  ghc-options:          -threaded
  type:                 exitcode-stdio-1.0
  main-is:              Pear/Spec.hs
  other-modules:        Pear.Positive.Spec
                        Pear.Tree.Spec
  build-depends:        hspec
                      , pear

test-suite pear-doctest
  import:               library-setup
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              doctest.hs
  build-depends:        doctest >= 0.20.0
                      , pear
