cabal-version:      3.4
name: pear
version: 0.1.0.0
synopsis: Pear Trees: An indexed type using type-level binary numbers
homepage: https://github.com/rampion/pear
license: MIT
license-file: LICENSE
author: Noah Luck Easterly
maintainer: noah.easterly@gmail.com
category: Data
build-type: Simple
extra-doc-files: CHANGELOG.md, doc/ANNOUNCE.md

flag Development
  description: Enable all warnings and upgrade warnings to errors
  default: False
  manual: True

common setup
  if flag(development)
    ghc-options: -Wall -Wextra -Werror -Wno-name-shadowing
  build-depends: base ^>=4.18.2.1
  default-language: GHC2021

library
  import: setup
  exposed-modules: Pear
  hs-source-dirs: src
    
test-suite pear-doctest
  import: setup
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: doctest.hs
  build-depends: doctest >= 0.20.0, pear

library markdown-examples
  import: setup
  build-tool-depends: markdown-unlit:markdown-unlit ^>= 0.6.0
  ghc-options: -pgmL markdown-unlit
  hs-source-dirs: test
  exposed-modules: ANNOUNCE 
